--- a/workspace/ims-client/src/app/buckwaframework/common/components/modal/modal.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/common/components/modal/modal.component.html
@@ -37,6 +37,6 @@
 </div>
 
 <!-- type: custom -->
-<div class="ui {{ size || 'mini' }} hidden transition modal" id="{{ id }}" *ngIf="chkType('custom')">
+<div class="ui {{ size || '' }} hidden transition modal" id="{{ id }}" *ngIf="chkType('custom')">
     <ng-content></ng-content>
 </div>
