--- a/workspace/ims-client/src/app/app.component.css
+++ b/workspace/ims-client/src/app/app.component.css
@@ -34,3 +34,26 @@
   width: 100%;
   padding: 15px 0;
 }
+
+
+.modal {
+  position: absolute;
+}
+
+.mini.modal {
+  top: 15%;
+  left: 50%;
+  margin-left: -12.5%;
+}
+
+.tiny.modal {
+  top: 15%;
+}
+
+.small.modal {
+  top: 15%;
+}
+
+.large.modal {
+  top: 20%;
+}
