--- a/workspace/ims-client/src/app/buckwaframework/common/components/modal/modal.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/common/components/modal/modal.component.css
@@ -1,21 +1,13 @@
 .modal {
-    position: absolute;
+    top: 15% !important;
+    position: absolute !important;
 }
 
 .mini.modal {
-    top: 15%;
-    left: 50%;
-    margin-left: -12.5%;
-}
-
-.tiny.modal {
-    top: 15%;
-}
-
-.small.modal {
-    top: 15%;
+    left: 50% !important;
+    margin-left: -12.5% !important;
 }
 
 .large.modal {
-    top: 20%;
+    top: 20% !important;
 }
