--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -70,7 +70,7 @@
   </div>
 </div>
 <!-- add modal -->
-<div class="ui modal transition hidden" id='modalAddDocument'>
+<div class="ui large modal transition hidden" id='modalAddDocument'>
 
   <div class="header" style="text-align: center !important;">
     เลือกประเภทเอกสาร
